# erp

./: Erp-monad-examples.txt  EverythingList.md  Main.hs  README.md  Testing.md  default.nix  erp.cabal  erp.lkshs  erp.lkshw  haskell.tmux  notes.txt  roadmap.md
hxclient/: ErpModel.hx  application.xml
src/client/: erp.elm
src/common/: Account.hs  AccountAsset.hs  Bank.hs  Carrier.hs  Company.hs  Country.hs  Currency.hs  Entity.hs  ErpError.hs  FiscalYear.hs  Forecast.hs  IncomingRequestType.hs  Invoice.hs  Product.hs  Production.hs  Project.hs  Purchase.hs  Sale.hs  Shipment.hs  StaleObject.hs  Stock.hs  SystemSequence.hs  Timesheet.hs  imports.hs  login.hs
src/resources/: erp_ui.glade
src/server/: ErpModel.hs  ErpServer.hs  server.hs
testsuite/tests/: ProductSpec.hs  SpecHelper.hs  TestHarness.hs  TestRunner.hs  TestRunner.hs~  TestSpec.hs
