Name:   erp

Version: 0.0.1

Synopsis: Create a data model for erp

Description: Create a data model for erp

Homepage: TBD

License: GPL

Author: dg

Maintainer: dinkar.ganti@gmail.com

Category: Business Application

Build-type: Simple

cabal-version : >= 1.14
extra-source-files: testsuite/tests/TestRunner.hs

library
  GHC-options: -fhpc
  default-language: Haskell2010
  build-depends: base, acid-state, websockets, mtl,
                 containers, safecopy
                 , text, async, aeson
                 , time
                 , url
                 , hslogger
                 , directory
                 , datetime
  hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
  exposed-modules:  ErpServer,ErpModel, Login, Account, Company, Currency, FiscalYear, Entity
                    , AccountAsset
                    , Bank
                    , Product
                    , Carrier
  default-extensions: OverloadedStrings, CPP
     , DeriveDataTypeable
     , TypeFamilies
     , TemplateHaskell
     , TypeSynonymInstances
     , FlexibleInstances
     , DataKinds
     , DeriveGeneric
     , NoMonomorphismRestriction
executable erp
  GHC-options:
  default-language: Haskell2010
  main-is: Main.hs
  -- hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
  build-depends: base, acid-state, websockets, mtl, containers
                 , safecopy
                 , text
                 , async
                 , aeson
                 , time
                 , erp
                 , url
                 , hslogger
                 , directory
                 , datetime
  default-extensions: OverloadedStrings, CPP
     , DeriveDataTypeable
     , TypeFamilies
     , TemplateHaskell
     , FlexibleInstances
     , TypeSynonymInstances
     , DataKinds
     , DeriveGeneric
     , NoMonomorphismRestriction

executable erp_ui
  GHC-options:
  default-language: Haskell2010
  main-is: Main.hs
  -- hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
  build-depends: base, acid-state, websockets, mtl, containers
                 , safecopy
                 , text
                 , async
                 , aeson
                 , time
                 , erp
                 , url
                 , directory
                 , datetime
  default-extensions: OverloadedStrings, CPP
     , DeriveDataTypeable
     , TypeFamilies
     , TemplateHaskell
     , FlexibleInstances
     , TypeSynonymInstances
     , DataKinds
     , DeriveGeneric
     , NoMonomorphismRestriction

Test-suite tests
  Type: exitcode-stdio-1.0

  default-language: Haskell2010
  Hs-source-dirs: testsuite/tests
  Main-is: TestRunner.hs
  default-extensions: OverloadedStrings, CPP
     , DeriveDataTypeable
     , TypeFamilies
     , TemplateHaskell
     , TypeSynonymInstances
     , FlexibleInstances
     , DataKinds
     , DeriveGeneric
  GHC-options: -rtsopts -fhpc
  Build-depends: base, acid-state, websockets, mtl, containers
                 , safecopy
                 , erp
                 , text
                 , async
                 , test-framework
                 , test-framework-quickcheck2
                 , QuickCheck
                 , random
                 , aeson
                 , time
                 , url
                 , directory
                 , datetime
