name: erp
version: 0.0.1
cabal-version: >=1.16
build-type: Simple
license: GPL
license-file: ""
maintainer: dinkar.ganti@gmail.com
homepage: TBD
synopsis: Create a data model for erp
description: Create a data model for erp
category: Business Application
author: dg
data-dir: ""
extra-source-files: testsuite/tests/TestRunner.hs

library
    build-depends: base -any, acid-state -any, websockets -any,
                   mtl -any, containers -any, safecopy -any, text -any, async -any,
                   aeson -any, time -any, url -any, hslogger -any, directory -any,
                   datetime -any
    exposed-modules: ErpError ErpServer ErpModel Login Account Company
                     Currency FiscalYear Entity AccountAsset Bank Product Carrier
    exposed: True
    buildable: True
    default-language: Haskell2010
    default-extensions: OverloadedStrings CPP DeriveDataTypeable
                        TypeFamilies TemplateHaskell TypeSynonymInstances FlexibleInstances
                        DataKinds DeriveGeneric NoMonomorphismRestriction
                        OverlappingInstances
    hs-source-dirs: . src/server testsuite/tests src/common src/client
    ghc-options: -fhpc -DDEBUG

executable erp
    build-depends: base -any, acid-state -any, websockets -any,
                   mtl -any, containers -any, safecopy -any, text -any, async -any,
                   aeson -any, time -any, erp -any, url -any, hslogger -any,
                   directory -any, datetime -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    default-extensions: OverloadedStrings CPP DeriveDataTypeable
                        TypeFamilies TemplateHaskell FlexibleInstances TypeSynonymInstances
                        DataKinds DeriveGeneric NoMonomorphismRestriction
                        OverlappingInstances
    other-modules:

executable erp_ui
    build-depends: base -any, acid-state -any, websockets -any,
                   mtl -any, containers -any, safecopy -any, text -any, async -any,
                   aeson -any, time -any, erp -any, url -any, directory -any,
                   datetime -any
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    default-extensions: OverloadedStrings CPP DeriveDataTypeable
                        TypeFamilies TemplateHaskell FlexibleInstances TypeSynonymInstances
                        DataKinds DeriveGeneric NoMonomorphismRestriction
                        OverlappingInstances
    other-modules:

test-suite tests
    build-depends: base -any, acid-state -any, websockets -any,
                   mtl -any, containers -any, safecopy -any, erp -any, text -any,
                   async -any, test-framework -any, test-framework-quickcheck2 -any,
                   QuickCheck -any, random -any, aeson -any, time -any, url -any,
                   directory -any, datetime -any
    type: exitcode-stdio-1.0
    main-is: TestRunner.hs
    buildable: True
    default-language: Haskell2010
    default-extensions: OverloadedStrings CPP DeriveDataTypeable
                        TypeFamilies TemplateHaskell TypeSynonymInstances FlexibleInstances
                        DataKinds DeriveGeneric OverlappingInstances
    hs-source-dirs: testsuite/tests
    ghc-options: -rtsopts -fhpc
