name: erp
version: 0.0.1
cabal-version: >=1.16
build-type: Simple
license: GPL
license-file: ""
maintainer: dinkar.ganti@gmail.com
homepage: TBD
synopsis: Create a data model for erp
description: Create a data model for erp
category: Business Application
author: dg
data-dir: ""
extra-source-files: testsuite/tests/TestRunner.hs

library
    build-depends:    base -any
                    , acid-state >= 0.12.1
                    , websockets >= 0.8.2.0
                    , mtl >= 2.1.2
                    , containers -any
                    , safecopy >= 0.8.2
                    , text >= 0.11.3.1
                    , async >= 2.0.1.4
                    , aeson >= 0.7.0.2
                    , time >= 1.4.0.1
                    , url >= 2.1.3
                    , hslogger >= 1.2.3
                    , directory >= 1.2.0.1
                    , datetime >= 0.2.1
                    , hspec >= 1.9.2
    exposed-modules: ErpError ErpServer ErpModel Login Account Company
                     Currency FiscalYear Entity AccountAsset Bank Product Carrier
    exposed: True
    buildable: True
    default-language: Haskell2010
    default-extensions: OverloadedStrings CPP DeriveDataTypeable
                        TypeFamilies TemplateHaskell TypeSynonymInstances FlexibleInstances
                        DataKinds DeriveGeneric NoMonomorphismRestriction
                        OverlappingInstances
    hs-source-dirs: . src/server testsuite/tests src/common src/client
    ghc-options: -fhpc -DDEBUG

executable erp
        build-depends:    base -any
                    , acid-state >= 0.12.1
                    , websockets >= 0.8.2.0
                    , mtl >= 2.1.2
                    , containers -any
                    , safecopy >= 0.8.2
                    , text >= 0.11.3.1
                    , async >= 2.0.1.4
                    , aeson >= 0.7.0.2
                    , time >= 1.4.0.1
                    , url >= 2.1.3
                    , hslogger >= 1.2.3
                    , directory >= 1.2.0.1
                    , datetime >= 0.2.1
                    , hspec >= 1.9.2
                    , erp

    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    default-extensions: OverloadedStrings CPP DeriveDataTypeable
                        TypeFamilies TemplateHaskell FlexibleInstances TypeSynonymInstances
                        DataKinds DeriveGeneric NoMonomorphismRestriction
                        OverlappingInstances
    other-modules:

executable erp_ui
    build-depends:    base -any
                    , acid-state >= 0.12.1
                    , websockets >= 0.8.2.0
                    , mtl >= 2.1.2
                    , containers -any
                    , safecopy >= 0.8.2
                    , text >= 0.11.3.1
                    , async >= 2.0.1.4
                    , aeson >= 0.7.0.2
                    , time >= 1.4.0.1
                    , url >= 2.1.3
                    , hslogger >= 1.2.3
                    , directory >= 1.2.0.1
                    , datetime >= 0.2.1
                    , hspec >= 1.9.2
                    , erp

    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    default-extensions: OverloadedStrings CPP DeriveDataTypeable
                        TypeFamilies TemplateHaskell FlexibleInstances TypeSynonymInstances
                        DataKinds DeriveGeneric NoMonomorphismRestriction
                        OverlappingInstances
    other-modules:

test-suite tests
    build-depends:    base -any
                    , acid-state >= 0.12.1
                    , websockets >= 0.8.2.0
                    , mtl >= 2.1.2
                    , containers -any
                    , safecopy >= 0.8.2
                    , text >= 0.11.3.1
                    , async >= 2.0.1.4
                    , aeson >= 0.7.0.2
                    , time >= 1.4.0.1
                    , url >= 2.1.3
                    , hslogger >= 1.2.3
                    , directory >= 1.2.0.1
                    , datetime >= 0.2.1
                    , hspec >= 1.9.2
                    , QuickCheck >= 2.6
                    , erp

    type: exitcode-stdio-1.0
    main-is: TestRunner.hs
    buildable: True
    default-language: Haskell2010
    default-extensions: OverloadedStrings CPP DeriveDataTypeable
                        TypeFamilies TemplateHaskell TypeSynonymInstances FlexibleInstances
                        DataKinds DeriveGeneric OverlappingInstances
    hs-source-dirs: testsuite/tests
    ghc-options: -rtsopts -fhpc
